# kanji-ai-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRODUCTION_READINESS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: auto-deploy.yml  ci.yml  manual-deploy.yml  release-drafter.yml
docs/: deployment.md
scripts/: __init__.py  init_firestore.py  performance_validation.py
specs/001-slack-bot-ai/: spec.md  spec_ja.md
specs/002-slack-bot-ai/: data-model.md  plan.md  plan_ja.md  quickstart.md  research.md  spec.md  spec_ja.md  tasks.md
specs/002-slack-bot-ai/contracts/: event_coordination.yaml  external_apis.yaml  slack_events.yaml
src/: __init__.py
src/agents/: __init__.py  base_agent.py  calendar_agent.py  coordination_agent.py  participant_agent.py  scheduling_agent.py  venue_agent.py
src/cli/: __init__.py  calendar_cli.py  event_cli.py  participant_simulator.py  venue_search_cli.py
src/integrations/: __init__.py  firestore_client.py  google_calendar.py  google_places.py  gurume_navi.py  slack_handler.py
src/models/: __init__.py  calendar_entry.py  coordination_session.py  event.py  intermediate_confirmation.py  participant.py  repository.py  venue.py
tests/: __init__.py
tests/contract/: __init__.py  test_google_calendar_api.py  test_google_places_api.py  test_internal_event_api.py  test_slack_bot_mentions.py  test_slack_direct_messages.py  test_slack_events_verification.py  test_slack_thread_replies.py
tests/unit/: test_agent_coordination.py
